# free-foil-NBE

./: .gitignore  CHANGELOG.md  README.md  cabal.project  free-foil-nbe.cabal  grammar-regen.sh  res.cabal
.github/workflows/: ci.yml
app/Untyped/FreeFoil/: Internal.hs  LambdaPi.hs
bench/: Main.hs  README.md  baseline.csv  baseline.txt
demo/: LambdaPi.hs
demo/LambdaPi/: Generated.hs  LambdaNWays.hs  Parser.hs  PrettyPrint.hs  Raw.hs
demo/grammar/: Syntax.cf
src/FreeFoil/: NbE.hs
test/: LambdaPi.hs  Main.hs
test/LambdaPi/: Gen.hs
